Slight 508 fix to workflow toolbar contrast critical error on wave tool, font to light where version being displayed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1237,6 +1237,7 @@ td.komet-concept-table-nested-indicator.komet-concept-table-nested-indicator-ope
 .komet-workflow-action-bar{
     height: 40px;
     background-color: black;
+  color: #ececec;
     border: 1px solid rgba(0, 155, 255, 1);
 }
 .komet-workflow-action-bar .navbar{
